fixed link alignment

--- a/public/scss/_contactModal.scss
+++ b/public/scss/_contactModal.scss
@@ -75,6 +75,7 @@
 			padding: 5%;
 			display: block;
 			position: relative;
+			text-align: center;
 			a
 			{
 				font-family: $bodyFont;
